# chopshop

./: .cursorignore  .cursorindexingignore  .gitmodules  CMakeLists.txt  ChopScrew.jucer  ChopShop.jucer  README.md  RELEASE.md  VERSION  debug-app.sh  debugging-guide.md
.cursor/: rules
.cursor/rules/: juce-header.mdc  namespace-te.mdc
.github/workflows/: build_and_test.yml  build_and_test.yml.bak
Source/: BaseEffectComponent.cpp  BaseEffectComponent.h  ChopComponent.cpp  ChopComponent.h  ControlBarComponent.cpp  ControlBarComponent.h  ControllerMappingComponent.cpp  ControllerMappingComponent.h  CustomLookAndFeel.h  DelayComponent.cpp  DelayComponent.h  DistortionEffectDemo.h  FlangerComponent.cpp  FlangerComponent.h  GamepadManager.cpp  GamepadManager.h  LibraryComponent.cpp  LibraryComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  Osc2D.h  OscilloscopePlugin.cpp  OscilloscopePlugin.h  Parameters.h  PhaserComponent.cpp  PhaserComponent.h  ReverbComponent.cpp  ReverbComponent.h  RingBuffer.h  ScrewComponent.cpp  ScrewComponent.h  Utilities.h  VinylBrakeComponent.cpp  VinylBrakeComponent.h  minibpm.cpp  minibpm.h
Source/Plugins/: AutoDelayPlugin.h  FlangerPlugin.h
assets/: moonbase_api_config.json
benchmarks/: Benchmarks.cpp
packaging/: distribution.xml.template  installer.iss  pamplejuce.icns
source/: AutomationLane.cpp  AutomationLane.h  BaseEffectComponent.cpp  BaseEffectComponent.h  ChopComponent.cpp  ChopComponent.h  ChopPlugin.h  ChopTrackLane.cpp  ChopTrackLane.h  ControlBarComponent.cpp  ControlBarComponent.h  ControllerMappingComponent.cpp  ControllerMappingComponent.h  CrossfaderAutomationLane.cpp  CrossfaderAutomationLane.h  CustomLookAndFeel.h  DelayComponent.cpp  DelayComponent.h  FlangerComponent.cpp  FlangerComponent.h  GamepadManager.cpp  GamepadManager.h  JuceHeader.h  LibraryBar.h  LibraryComponent.cpp  LibraryComponent.h  LibraryWindow.h  Main.cpp  MainComponent.cpp  MainComponent.h  Osc2D.h  OscilloscopePlugin.cpp  OscilloscopePlugin.h  PhaserComponent.cpp  PhaserComponent.h  PluginAutomationComponent.cpp  PluginAutomationComponent.h  RampedValue.h  RegionManager.h  ReverbComponent.cpp  (+28 more)
source/Plugins/: AutoDelayPlugin.h  AutoPhaserPlugin.h  ChopPlugin.cpp  ChopPlugin.h  ScratchPlugin.cpp  ScratchPlugin.h
